footer done, some layout issues can need to be improved

--- a/wp-content/themes/TB_landing_page/assets/scss/content/footer_module.scss
+++ b/wp-content/themes/TB_landing_page/assets/scss/content/footer_module.scss
@@ -1,9 +1,91 @@
 
-.soMeIcon{
- width: 10px;
- height: auto;
+.followUs{
+    text-align: center;
 }
 
-body{
-    background-color: green;
+.soMEdiv{
+    justify-content: center;
+    justify-items: center;
+    justify-self: center;
 }
+
+
+.soMEdiv img{
+    margin-left: auto;
+    margin-right: auto;
+    width: 40px;
+    height: auto;
+    margin: 10px;
+}
+
+
+.somePlaceholder{
+    display: flex;
+    justify-content: center;
+    justify-items: center;
+    justify-self: center;
+}
+
+.underline {
+    text-decoration: none; 
+    position: relative; 
+    font-size: 15px;
+    float: right;
+    margin-left: 20px;
+    margin-top: 25px;
+}
+
+ .underline:after {
+     position: absolute;
+     content: '';
+     height: 2px;
+       /* adjust this to move up and down. you may have to adjust the line height of the paragraph if you move it down a lot. */
+     bottom: -4px; 
+
+
+    /****** 
+    optional values below 
+    ******/
+     
+     /* center - (optional) use with adjusting width   */
+     margin: 0 auto;
+       left: 0;
+     right: 0;
+       width: 100%;
+       background: #F8EA4B;
+ }   
+
+ .rightsReserved{
+    font-size: 15px;
+    text-align: center;
+    margin-top: 25px;
+}   
+ 
+ 
+ .logo img{
+     height: 75px;
+     width: auto;
+ }
+
+
+
+ @media only screen and (max-width : 991px) {
+
+    .bottomRow{
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    .underline {
+        float: none;
+      } 
+      
+    .termsPrivacy{
+        text-align: center;
+    }
+
+    
+    .soMEdiv img{
+        width: 26px;
+    }
+ }
